# team-project

./: .gitignore  README.md  main.py  pyproject.toml  requirement.txt  tempCodeRunnerFile.py
Code_test/: pysidedoc.txt  test.db  test.py  test2.py
api/: google.py
cold_storage/: db.py  tempCodeRunnerFile.py
database/: database_main.py  team_project_db.db  team_project_db.db-journal  team_project_db.sqbpro  tempCodeRunnerFile.py
database/cold_storage/: db.py  db.sqlite3
database/recipe/: db.py
favorite_ref/: db.py
interface/: Create_object.py  add_favorite_recipe_group_modal.ui  add_ref_modal.ui  interface_interaction.py  interface_main.py  interface_ui.ui  interface_ui_python.py  material_stat.ui  recipe_btn_box.py  recipe_info_modal.ui  recommand_feed_box.py  ref_card.py  search_manage_ref_modal.ui  sort_combo_box.py
recipe/: db.py
setting/: db.py
